[tool.poetry]
name = "game"
version = "0.1.0"
description = ""
authors = ["Anneta <nikolaevaanneta@gmail.com>"]
packages = [
  { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-even = "brain_games.scripts.brain_calc:main"
brain-even = "brain_games.scripts.brain_gcd:main"
brain-even = "brain_games.scripts.brain_progression:main"
brain-even = "brain_games.scripts.brain_prime:main"
